// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TipeSelectUnderline.vue renders 1`] = `
<div data-tipe-ui="TipeSelectUnderline" class="select-flex">
  <div tabindex="0" class="select medium">
    <TipeNativeSelect-stub options="[object Object],[object Object]" placeholder="" selectedValue="[object Object]"></TipeNativeSelect-stub>
    <div class="fake-select medium">Owner</div>
    <!---->
  </div>
</div>
`;

exports[`TipeSelectUnderline.vue renders without options 1`] = `
<div data-tipe-ui="TipeSelectUnderline" class="select-flex">
  <div tabindex="0" class="select medium">
    <TipeNativeSelect-stub placeholder="" selectedValue="[object Object]"></TipeNativeSelect-stub>
    <div class="fake-select error medium">Please provide select options</div>
    <!---->
  </div>
</div>
`;
